Fix profile image to not distort when scaling down

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,11 @@ body {
             border-radius: 20px;
             border: inset 8px rgb(249, 215, 225);
             box-shadow: 0px 0px 0px 4px rgb(72, 44, 53);
+            flex: none;
+        }
+
+        .screen {
+            flex: auto;
         }
     }
 
